--- a/azure.yaml
+++ b/azure.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: serverless-chat-langchainjs
+name: serverless-chat-langchainpython
 metadata:
-  template: serverless-chat-langchainjs@1.0.0
+#  template: serverless-chat-langchainjs@1.0.0
 
 services:
   webapp:
@@ -20,8 +20,8 @@ services:
           run: npm run build
 
   api:
-    project: ./packages/api
-    language: ts
+    project: ./packages/api_python
+    language: python
     host: function
 
 hooks:
