--- a/azure.yaml
+++ b/azure.yaml
@@ -2,7 +2,7 @@
 
 name: serverless-chat-langchainpython
 metadata:
-#  template: serverless-chat-langchainjs@1.0.0
+  template: serverless-chat-langchainjs@1.0.0
 
 services:
   webapp:
